generate/mvPropHandling/Include/mvPropHandlingDatatypes.h

			const int PROP_LAST_CONSTANT          = PROP_MAX_BINARY_BUFFER_SIZE;
#		define INVALID_ID (-1)
#		define PROP_MAX_VAL (-1)
#		define PROP_MIN_VAL (-2)
#		define PROP_STEP_WIDTH (-3)
#		define PROP_DEFAULT_VALUE (-4)
#		define PROP_MAX_BINARY_BUFFER_SIZE (-5)
#		define PROP_LAST_CONSTANT (PROP_MAX_BINARY_BUFFER_SIZE)
#		define DEFAULT_STRING_SIZE_LIMIT (8192)
#		define END_OF_LIST (-1)
#		define ROOT_LIST (0)
#		define smIgnoreLists (0x2)
#		define smIgnoreMethods (0x4)
#		define smIgnoreProperties (0x8)
enum TPROPHANDLING_ERROR
{
	PROPHANDLING_NO_ERROR = 0,
	PROPHANDLING_FIRST_ERROR_CODE = -2000,
	PROPHANDLING_NOT_A_LIST = PROPHANDLING_FIRST_ERROR_CODE,
	PROPHANDLING_NOT_A_PROPERTY = -2001,
	PROPHANDLING_NOT_A_METHOD = -2002,
	PROPHANDLING_NO_READ_RIGHTS = -2003,
	PROPHANDLING_NO_WRITE_RIGHTS = -2004,
	PROPHANDLING_NO_MODIFY_SIZE_RIGHTS = -2005,
	PROPHANDLING_INCOMPATIBLE_COMPONENTS = -2006,
	PROPHANDLING_NO_USER_ALLOCATED_MEMORY = -2007,
	PROPHANDLING_UNSUPPORTED_PARAMETER = -2008,
	PROPHANDLING_SIZE_MISMATCH = -2009,
	PROPHANDLING_IMPLEMENTATION_MISSING = -2010,
	PROPHANDLING_ACCESSTOKEN_CREATION_FAILED = -2011,
	PROPHANDLING_INVALID_PROP_VALUE = -2012,
	PROPHANDLING_PROP_TRANSLATION_TABLE_CORRUPTED = -2013,
	PROPHANDLING_PROP_VAL_ID_OUT_OF_BOUNDS = -2014,
	PROPHANDLING_PROP_TRANSLATION_TABLE_NOT_DEFINED = -2015,
	PROPHANDLING_INVALID_PROP_VALUE_TYPE = -2016,
	PROPHANDLING_PROP_VAL_TOO_LARGE = -2017,
	PROPHANDLING_PROP_VAL_TOO_SMALL = -2018,
	PROPHANDLING_COMPONENT_NOT_FOUND = -2019,
	PROPHANDLING_LIST_ID_INVALID = -2020,
	PROPHANDLING_COMPONENT_ID_INVALID = -2021,
	PROPHANDLING_LIST_ENTRY_OCCUPIED = -2022,
	PROPHANDLING_COMPONENT_HAS_OWNER_ALREADY = -2023,
	PROPHANDLING_COMPONENT_ALREADY_REGISTERED = -2024,
	PROPHANDLING_LIST_CANT_ACCESS_DATA = -2025,
	PROPHANDLING_METHOD_PTR_INVALID = -2026,
	PROPHANDLING_METHOD_INVALID_PARAM_LIST = -2027,
	PROPHANDLING_SWIG_ERROR = -2028,
	PROPHANDLING_INVALID_INPUT_PARAMETER = -2029,
	PROPHANDLING_COMPONENT_NO_CALLBACK_REGISTERED = -2030,
	PROPHANDLING_INPUT_BUFFER_TOO_SMALL = -2031,
	PROPHANDLING_WRONG_PARAM_COUNT = -2032,
	PROPHANDLING_UNSUPPORTED_OPERATION = -2033,
	PROPHANDLING_CANT_SERIALIZE_DATA = -2034,
	PROPHANDLING_INVALID_FILE_CONTENT = -2035,
	PROPHANDLING_CANT_ALLOCATE_LIST = -2036,
	PROPHANDLING_CANT_REGISTER_COMPONENT = -2037,
	PROPHANDLING_PROP_VALIDATION_FAILED = -2038,
#ifndef DOXYGEN_SHOULD_SKIP_THIS
	PROPHANDLING_PSEUDO_LAST_ASSIGNED_ERROR_CODE,
	PROPHANDLING_LAST_ASSIGNED_ERROR_CODE = PROPHANDLING_PSEUDO_LAST_ASSIGNED_ERROR_CODE - 2,
#endif 
	PROPHANDLING_LAST_VALID_ERROR_CODE = -2099
};
enum TComponentFlag
{
	cfUndefined = 0x0,
	cfReadAccess = 0x1,
	cfWriteAccess = 0x2,
	cfRWAccess = cfReadAccess | cfWriteAccess,
	cfFixedSize = 0x4,
	cfUserAllocatedMemory = 0x8,
	cfInvisible = 0x10,
	cfAllowValueCombinations = 0x20,
	cfShouldBeDisplayedAsList = 0x40,
	cfDisallowSerialize = 0x80,
	cfAlwaysForceClone = 0x100,
	cfNotAvailable = 0x200,
	cfNotImplemented = 0x400,
	cfContainsBinaryData = 0x800
#ifndef DOXYGEN_SHOULD_SKIP_THIS
	, cfLast = cfContainsBinaryData
#endif 
};
enum TComponentVisibility
{
	cvBeginner = 0,
	cvExpert = 1,
	cvGuru = 2,
	cvInvisible = 3
#ifndef DOXYGEN_SHOULD_SKIP_THIS
	, cvLast
#endif 
};
enum TValueType
{
	vtInt = 0x1,
	vtFloat,
	vtPtr,
	vtString,
	vtInt64
};
enum TComponentType
{
	ctProp = 0x00010000,
	ctList = 0x00020000,
	ctMeth = 0x00040000,
	ctPropInt = ctProp | vtInt,
	ctPropFloat = ctProp | vtFloat,
	ctPropString = ctProp | vtString,
	ctPropPtr = ctProp | vtPtr,
	ctPropInt64 = ctProp | vtInt64
};
enum TStorageFlag
{
	sfDefault = 0x0,
	sfNative = 0x1,
	sfRaw = 0x2,
	sfVolatile = 0x4,
	sfProcessPropTranslationDict = 0x8,
	sfCreateMissingEntries = 0x10,
	sfProcessReadOnlyComponents = 0x20,
	sfIgnorePropData = 0x40,
	sfProcessDocString = 0x80,
	sfProcessPropConstantsDict = 0x100,
	sfProcessInheritance = 0x200,
	sfIgnoreBasicData = 0x400,
	sfIgnoreInvisible = 0x800,
	sfFile = 0x1000,
	sfProcessDisplayName = 0x2000
#ifndef DOXYGEN_SHOULD_SKIP_THIS
	, sfReserved1 = 0x8000
#endif 
};
enum TScope
{
	sGlobal = 0,
	sUser = 1
};
enum TCallbackType
{
	ctOnChanged = 0,
	ctOnReadData = 1,
	ctOnWriteData = 2
};
	typedef enum TPROPHANDLING_ERROR TPROPHANDLING_ERROR;
	typedef enum TComponentFlag TComponentFlag;
	typedef enum TComponentVisibility TComponentVisibility;
	typedef enum TValueType TValueType;
	typedef enum TComponentType TComponentType;
	typedef enum TStorageFlag TStorageFlag;
	typedef enum TScope TScope;
	typedef enum TCallbackType TCallbackType;
typedef void*		CallbackHandle;